[chromium] Events can't be triggered on MediaStreamTrack https://bugs.webkit.org/show_bug.cgi?id=110930

Reviewed by Kentaro Hara.

Source/WebCore:

Spec: http://dev.w3.org/2011/webrtc/editor/getusermedia.html#mediastreamtrack
ended event handler should be triggered, when stop() is called.

No new tests because the test fast/mediastream/MediaStreamTrack.html
had covered it already.

* platform/mediastream/chromium/MediaStreamCenterChromium.cpp:
(WebCore::MediaStreamCenterChromium::didStopLocalMediaStream):

Tools:

Related code was moved to MediaStreamCenterChromium::didStopLocalMediaStream

* DumpRenderTree/chromium/TestRunner/src/MockWebMediaStreamCenter.cpp:
(WebTestRunner::MockWebMediaStreamCenter::didStopLocalMediaStream):


Canonical link: https://commits.webkit.org/129481@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144410 268f45cc-cd09-0410-ab3c-d52691b4dbfc